 outweigh the costs!

0.9.8
*Fixed a bug where re-profiling a cancelled profile would freeze the GUI until
 the profiling was finished.
*Fixed recent menu. It now works as expected.
*Fixed forward engineering syntax error for LONG and LONG RAW in Oracle.
*Added convenient shortcut for performing a structural comparison directly from
 tree view of source database connections.
*Added the ability to used auto-increment in both MySQL and PostgreSQL
*Added project option to have relationship lines drawn as direct, straight lines
 or in the old rectilinear style.  The default is still the old style.
*Made dragging tables much easier at extreme zoom levels by dragging the table
 instead of a column when dragging with the Alt key held down (option key on Mac)
*Added a new feature to automatically straighten relationship lines that can be
 straightened without moving any tables.  It can be found in the play pen's context
 menu (also known as the popup menu or the right-click menu).

0.9.7

*Fixed a bug with handling of automatic cascading primary keys in multi-level
 identifying relationships.
*Fixed a bug which was causing the Architect to save corrupt project files.
 This bug was triggered by adding and removing a column from the primary key.
*Further enhanced the profile manager so it is possible to run profiles
 multiple times per session.
*Made it possible to add new database connection types from within the GUI.
*Corrected the JDBC URL template for IBM DB2.  If upgrading, to obtain this fix,
 you have to remove the DB2 database type from the user preferences dialog,
 then restart the Architect.
*Corrected an error in the user guide relating to the creation of FK
 relationships.
*And more!

0.9.6

Initial open-source release!

*Added the ability to create ETL jobs for Pentaho Data Integration (formerly
 Kettle)
*A number of bug fixes
*Replaced the icon set with the free FAMFAMFAM icon set, which looks much